# wootpilot

./: .dockerignore  .env.example  .env.public-dev.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_conversation_assignment_state.py  0003_conversation_status_state.py  0004_outbound_safety_context.py  0005_outbound_retry_schedule.py  0006_message_provider_identity.py  0007_agent_run_automation_mode.py
data/mock-woocommerce/: catalog.demo-car-parts.json
docs/: README.md  configuration.md  production-readiness.md  wootpilot-initial-plan.md
docs/adr/: README.md
docs/architecture/: channels.md  chatwoot-channel.md  configuration.md  connectors.md  langchain-langgraph.md  mvp-conversation-behavior.md  observability.md  overview.md  persistence.md  policy-and-agent-workflow.md  production-readiness.md  support-workflow-graph.mmd  vocabulary.md  workflow.md
scripts/: chatwoot-dev-down  chatwoot-dev-logs  chatwoot-dev-reset  chatwoot-dev-up  dev-check  public-dev-doctor  public-dev-tunnel-run  public-dev-webhook-show  public-dev-webhook-sync  release-check  render-support-workflow-graph.py
src/wootpilot/: cli.py  (+5 more)
tests/: conftest.py  helpers.py  test_architecture_boundaries.py  test_catalog.py  test_chatwoot_client.py  test_cli.py  test_golden_conversations.py  test_health_and_settings.py  test_model_adapter.py  test_model_prompt.py  test_observability.py  test_outbound.py  test_persistence_readiness.py  test_webhook_intake.py  test_workflow.py
(+81 files in other folders)
