[project]
name = "wootpilot"
version = "0.1.0"
description = "AI copilot workflows for Chatwoot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiosqlite>=0.21.0",
  "alembic>=1.16.0",
  "fastapi>=0.122.0",
  "httpx>=0.28.0",
  "langchain>=1.2.0",
  "langchain-openrouter>=0.2.3",
  "langgraph>=1.2.0",
  "langgraph-checkpoint-sqlite>=3.0.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.11.0",
  "sqlalchemy[asyncio]>=2.0.44",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "pip-audit>=2.10.0",
  "pyright>=1.1.410",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "respx>=0.22.0",
  "ruff>=0.14.0",
]

[project.scripts]
wootpilot = "wootpilot.cli:main"

[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
